                       User-Visible wallet Changes

wallet 0.9 (unreleased)

    Report the correct error message when addprinc fails while creating a
    keytab object.

wallet 0.8 (2008-02-13)

    Fix the wallet client to use check instead of exists.

    Add file object support to the wallet server.

    Correctly handle get of an empty object in the wallet client.  The
    empty string is valid object content.

    Wallet::Config and hence the wallet server now checks for the
    environment variable WALLET_CONFIG and loads configuration from the
    file specified there instead of /etc/wallet/wallet.conf if it is set.

    wallet-backend now supports a -q flag, which disables syslog logging.

    wallet-admin now supports registering new object or ACL verifier
    implementations in the database.

    Remove the restriction that all object implementations must have class
    names of Wallet::Object::* and all ACL verifier implementations must
    have class names of Wallet::ACL::*.

    Add a full end-to-end test suite to catch protocol mismatches between
    the client and server, such as the one fixed in this release.

    Update the design documentation to reflect the current protocol and
    implementation.

wallet 0.7 (2008-02-08)

    Add new exists and autocreate wallet server interfaces.  The first
    states whether a given object exists and the second attempts to create
    the object using the default owner rules.  Remove default owner
    handling from the create interface, which is now for administrators
    only.  Remove server-side auto-creation of objects on get or store and
    instead have the client check for object existence and call autocreate
    if necessary.  This removes confusion between default ACLs and
    administrative object creation for users who are also on the ADMIN
    ACL.

    When creating a srvtab based on a just-downloaded keytab, extract the
    srvtab key before merging the keytab into an existing file.