@@ -73,6 +73,12 @@ extern int              snprintf(char *, size_t, const char *, ...)
 #if !HAVE_DECL_VSNPRINTF
 extern int              vsnprintf(char *, size_t, const char *, va_list);
 #endif
+#if !HAVE_STRLCAT
+extern size_t           strlcat(char *, const char *, size_t);
+#endif
+#if !HAVE_STRLCPY
+extern size_t           strlcpy(char *, const char *, size_t);
+#endif
 
 END_DECLS
 
