@@ -1,0 +1,2 @@
+#define TESTING 1
+#include <portable/strlcat.c>
